src/objects/Deal__c.object
<CustomObject>
    <description>Sales Manager may have many deals for same car (different time periods) and same car may have many deals made by various Sales Managers.</description>
    <fields>
        <fullName>Car__c</fullName>
        <label>Car</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Car__c.Is_Valid_For_Rent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Car__c.Type__c</field>
                <operation>equals</operation>
                <value>Sedan, Minivan, Hatchback</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of rent</description>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <referenceTo>Sales_Manager__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>DATETIMEVALUE(TODAY())</defaultValue>
        <description>Start date of rent, Default Today</description>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Open (DEFAULT) - there is a cliend who called and asked for a car. Car was reserved but no money paid yet.
Won - deal was successfull, money paid, car rent.
Lost - client refused to pay or cancelled the order.</description>
        <inlineHelpText>(Open, Won, Lost) Status of rent.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_creation_with_Open_status</fullName>
        <active>true</active>
        <description>Deal__c.Status__c record can be created only with Status__c = Open</description>
        <errorConditionFormula>OR( AND
       (ISNEW(), ISPICKVAL( Status__c , &quot;Won&quot; )),
    AND
       (ISNEW(),ISPICKVAL( Status__c , &quot;Lost&quot; )))</errorConditionFormula>
        <errorMessage>Status should be Open!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_earlier_than_End_Date</fullName>
        <active>true</active>
        <description>Deal__c.Start_Date__c should not be bigger than Deal__c.End_Date__c (on Create and Edit)</description>
        <errorConditionFormula>DATETIMEVALUE(Start_Date__c) &gt;  DATETIMEVALUE( End_Date__c )</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date should not be bigger than End_Date</errorMessage>
    </validationRules>
</CustomObject>